Test header changes

--- a/audition/index.html
+++ b/audition/index.html
@@ -58,25 +58,22 @@
             together, jam seshing, watching movies, group studying (go bears),
             and enjoying each other's terrible puns.
             <br><br>
-            In DeCadence, we are committed to musical excellence. This involves our members
-            being fully engaged during rehearsal, taking time to review their music outside
-            of rehearsal, and really putting forth your best efforts as a musician and as a
-            fellow singer.
+            In DeCadence, we are committed to musical excellence. This involves
+            each member being fully engaged during rehearsal, taking time to
+            review their music outside of rehearsal, and putting forth their best
+            effort as a musician and as an essential part of the group.
             <br><br>
-            Some events we always do include the UC Berkeley Welcome Back Showcase,
-            West Coast A Cappella Showcase, and our own personal end-of-semester concert.
-            We also have often attended the California A Cappella Festival at UCLA,
-            and sometimes compete at ICCAs (International Championship of Collegiate
-            A Cappella).
-            Throughout the year, we often perform at birthdays, alumni events, student
-            outreach, staff/work parties, the occasional proposal or wedding,
+            Events we traditionally perform at include the UC Berkeley Welcome
+            Back Showcase, West Coast A Cappella Showcase, and our own DeCadence
+            end-of-semester concert. We have often attended the California A
+            Cappella Festival at UCLA and have competed at ICCAs (The
+            International Championship of Collegiate A Cappella).
+            Throughout the year, we perform at birthdays, alumni events, student
+            outreach programs, staff parties, the occasional proposal or wedding,
             and whatever else people hire us to do! Wherever we sing, it's always
             a great experience.
             <br><br>
-            If you have any schedule conflicts, please still audition! We
-            understand that schedules are made prior to auditions, so we can
-            work with accommodations. No matter your schedule, we highly
-            encourage you to come out and audition.
+            Come out and sing for us! We can't wait to meet you at auditions.
           </p>
           <div class="col-lg-12" style="margin-top:10vh;padding-bottom:15px">
             <h3 class="text-uppercase">FAQ</h3>
@@ -98,7 +95,7 @@
               </tr>
                 <td><b>How do I schedule an audition?</b></td>
               <tr>
-                <td>Stay tuned for a sign-up sheet for Fall 2018 auditions!</td>
+                <td>Sign-up <a href="https://www.wejoinin.com/sheets/hlajn" target = "_blank">here!</a></td>
               </tr>
                 <td><b>What type of experience do I need?</b></td>
               <tr>
@@ -123,7 +120,7 @@
                 <td><b>Wait, I have to prepare a solo?!</b></td>
               </tr>
               <tr>
-                <td>Yes, but don’t worry! It doesn’t need to have mad Beyonce runs,
+                <td>Yes, but don’t worry! It doesn’t need to have mad Beyonc&eacute; runs,
                   nor does it need to hit the absolute lowest/highest
                   note you can go. Just pick something that best showcases your voice
                   and go with it! It would be helpful to choose a song in a
@@ -167,7 +164,7 @@
                 you’ll gain valuable audition experience in addition to learning more
                 about our great a cappella community at Cal. Whether it be for DeCadence or
                 others, we want you to find the perfect fit for your a cappella
-                interests (but we really hope it’s us!)!</td>
+                interests (but we really hope it’s us)!</td>
               </tr>
               <tr></tr>
               <tr></tr>
