--- a/index.html
+++ b/index.html
@@ -30,12 +30,10 @@
 
     <!-- Header -->
     <header class="masthead">
-      <div class="container">
-        <img src="img/DecadenceLogo.png" style="float: center; width:70%"></img>
-        <div>
-          <a class="btn btn-primary btn-lg text-uppercase js-scroll-trigger" href="audition/index.html">Audition</a>
-          <a class="btn btn-primary btn-lg text-uppercase js-scroll-trigger" href="contact/index.html">Contact Us</a>
-        </div>
+      <img src="img/DecadenceLogo.png" style="float: center; width:70%"></img>
+      <div>
+        <a class="btn btn-primary btn-lg text-uppercase js-scroll-trigger" href="audition/index.html">Audition</a>
+        <a class="btn btn-primary btn-lg text-uppercase js-scroll-trigger" href="contact/index.html">Contact Us</a>
       </div>
     </header>
 
@@ -165,7 +163,7 @@
             </a>
             <div class="member-caption">
               <h4>Jess Bonnar</h4>
-              <p class="text-muted">Yo Mama</p>
+              <p class="text-muted">That Bitch</p>
             </div>
           </div>
           <div class="col-md-4 col-6 member-item">
@@ -198,7 +196,7 @@
             </a>
             <div class="member-caption">
               <h4>Julia Matthews</h4>
-              <p class="text-muted" >The Nipja</p>
+              <p class="text-muted" >Master Carpenter</p>
             </div>
           </div>
           <div class="col-md-4 col-6 member-item">
@@ -361,7 +359,7 @@
               </div>
               <div class="col-lg-6 col-sm-6 mx-auto" style="">
                 <h2 class="text-uppercase">Jessica Bonnar</h2>
-                <p class="item-intro text-muted">Proud Mother of Jerry the Cat</p>
+                <p class="item-intro text-muted">That Bitch</p>
                 <ul class="list-inline" style="text-align: left">
                   <li><b>Hometown: </b>Visalia, CA</li>
                   <li><b>Major and Year: </b>Molecular and Cell Biology, 2019</li>
@@ -557,7 +555,7 @@
               </div>
               <div class="col-lg-6 col-sm-6 mx-auto">
                 <h2 class="text-uppercase">Julia Matthews</h2>
-                <p class="item-intro text-muted">The Nipja</p>
+                <p class="item-intro text-muted">Master Carpenter</p>
                 <ul class="list-inline" style="text-align: left">
                   <li><b>Hometown: </b>Livermore, CA</li>
                   <li><b>Major and Year: </b>Undeclared, 2020</li>
@@ -642,8 +640,8 @@
                       flute/recorder/ukulele player for "Pippin" and "Drowsy Chaperone" pit orchestras</li>
                     <li><b>Music Interests: </b>Mitski, Vulfpeck, Hiatus Kaiyote, Jacob Collier, Daniel Caesar, Charlie
                       Puth, HONNE, DEAN, IU, Mamamoo, BTS (fite me)</li>
-                    <li><b>Favorite A Cappella Group Besides DeCadence: </b>Pentatonix (sorry) (not sorry)</li>
-                    <li><b>Hobbies: </b>cooking, fashion, learning about different languages/language families, cuddling, binge-watching
+                    <li><b>Favorite A Cappella Group Besides DeCadence: </b>The Noreasters</li>
+                    <li><b>Hobbies: </b>cooking, fashion, learning about nerdy linguistic shit, cuddling, binge-watching
                       Youtube, RuPaul's Drag Race, writing songs/poetry, looking at dogs who are so ugly that they're cute</li>
                     <li><b>Solos: </b>Sir Duke, Emmylou, Love Like You</li>
                     <li><b>Arrangements:</b> Smoke Gets in Your Eyes, Sir Duke</li>
