Update website bio and link colors

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
         <h1 class="mb-0">Hi, I'm Ryan Lehmkuhl</h1>
         <div class="mb-5">
           <p class="lead mb-3">Third-year EECS undergraduate at UC Berkeley with a passion for cryptography and computer security.</p>
+          <p>
+          Outside of work, you will probably find me reading,
+             drinking excessive amounts of coffee, or <a
+              href='https://decadence.berkeley.edu'>singing</a>!
+          </p>
         </div>
           <p>
             <a href="https://www.github.com/ryanleh" class="mr-2 mb-2">Github</a>
