--- a/index.html
+++ b/index.html
@@ -17,47 +17,27 @@
 
 
     <!-- Theme Style -->
-    <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    
-    <div class="site-wrap">
-
       <aside style="background-image: url(img/profile_big.jpg);"></aside>
       <main>
-        <h1 class="mb-0">Hi, I'm Ryan Lehmkuhl</h1>
         <div class="mb-5">
+          <h1 class="mb-0">Hi, I'm Ryan Lehmkuhl</h1>
           <p class="lead mb-3">Third-year EECS undergraduate at UC Berkeley with a passion for cryptography and computer security.</p>
           <p>
           Outside of work, you will probably find me reading,
              drinking excessive amounts of coffee, or <a
               href='https://decadence.berkeley.edu'>singing</a>!
           </p>
-        </div>
-          <p>
-            <a href="https://www.github.com/ryanleh" class="mr-2 mb-2">Github</a>
-            <a href="resume.pdf" class="mr-2 mb-2">Resume</a>
-            <a href="https://www.linkedin.com/in/ryan-lehmkuhl-aba185146/" class="mr-2 mb-2">LinkedIn</a>
-          </p>
-        </div>
-        <div class="footer">
-          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-          Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | <a href="https://colorlib.com" target="_blank">Colorlib</a>
-          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+          <div>
+            <p>
+              <a href="https://www.github.com/ryanleh" class="mr-2 mb-2">Github</a>
+              <a href="resume.pdf" class="mr-2 mb-2">Resume</a>
+              <a href="https://www.linkedin.com/in/ryan-lehmkuhl-aba185146/" class="mr-2 mb-2">LinkedIn</a>
+            </p>
+          </div>
         </div>
       </main>
-    </div>
-
-    <!-- loader -->
-    <div id="loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#f4b214"/></svg></div>
-
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.waypoints.min.js"></script>
-    <script src="js/jquery.countdown.min.js"></script>
-    <script src="js/main.js"></script>
-
   </body>
 </html>
