--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <aside style="background-image: url(img/profile_big.jpg);"></aside>
       <main>
         <div class="mb-5">
-          <h1 class="mb-0">Hi, I'm Ryan Lehmkuhl</h1>
-          <p class="lead mb-3">Third-year EECS undergraduate at UC Berkeley with a passion for cryptography and computer security.</p>
+          <h1>Hi, I'm Ryan Lehmkuhl</h1>
+          <p class="lead">Third-year EECS undergraduate at UC Berkeley with a passion for cryptography and computer security.</p>
           <p>
           Outside of work, you will probably find me reading,
              drinking excessive amounts of coffee, or <a
@@ -37,6 +37,16 @@
               <a href="https://www.linkedin.com/in/ryan-lehmkuhl-aba185146/" class="mr-2 mb-2">LinkedIn</a>
             </p>
           </div>
+        </div>
+        <hr>
+        <div>
+          <h3 style="font-weight:300;">Publications</h3>
+          <p><strong>Delphi: A Cryptographic Inference Service for Neural
+            Networks. </strong><br> 
+      <i style="font-weight: 350">Pratyush Mishra, Ryan Lehmkuhl, Akshayaram Srinivasan, Wenting Zheng, Raluca Ada Popa.</i><br>
+      <a href="https://www.usenix.org/conference/usenixsecurity20">USENIX Security 2020.</a>
+      (<a href="https://eprint.iacr.org/2020/050">ePrint</a>, <a href="https://github.com/mc2-project/delphi">Code</a>)</p>
+</li>
         </div>
       </main>
   </body>
