--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
           <h1>Hi, I'm Ryan Lehmkuhl</h1>
           <p class="lead">Third-year EECS undergraduate at UC Berkeley with a passion for cryptography and computer security.</p>
           <p>
-          Outside of work, you will probably find me reading,
-             drinking excessive amounts of coffee, or <a
+          Outside of work, you will probably find me reading, pondering
+          epistemology, drinking excessive amounts of coffee, or <a
               href='https://decadence.berkeley.edu'>singing</a>!
           </p>
           <div>
