--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
       <main>
         <div class="mb-5">
           <h1>Hi, I'm Ryan Lehmkuhl</h1>
-          <p class="lead">Third-year EECS undergraduate at UC Berkeley with a passion for cryptography and computer security.</p>
+          <p class="lead">Fourth-year EECS undergraduate at UC Berkeley 
+          interested in using cryptography to build secure systems.</p>
           <p>
           Outside of work, you will probably find me reading, pondering
           epistemology, drinking excessive amounts of coffee, or <a
