--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800|Playfair+Display:,300, 400, 700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,500,700,800|Playfair+Display:,300, 400, 700" rel="stylesheet">
 
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/animate.css">
@@ -29,28 +29,33 @@
   <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-      <aside style="background-image: url(img/profile_big.jpg);"></aside>
       <main>
-        <div class="mb-5">
-          <h1>Hi, I'm Ryan Lehmkuhl</h1>
-          <p class="lead">Fourth-year EECS undergraduate at UC Berkeley 
-          interested in using cryptography to build secure systems.</p>
-          <p>
-          Outside of work, you will probably find me reading, pondering
-          epistemology, drinking excessive amounts of coffee, or <a
-              href='https://decadence.berkeley.edu'>singing</a>!
-          </p>
-          <div>
-            <p>
-              <a href="https://www.github.com/ryanleh" class="mr-2 mb-2">Github</a>
-              <a href="cv.pdf" class="mr-2 mb-2">CV</a>
-              <a href="https://www.linkedin.com/in/ryan-lehmkuhl-aba185146/" class="mr-2 mb-2">LinkedIn</a>
+        <div class="mb-5 center row">
+          <div class = "column">
+            <h2>Hi, I'm Ryan Lehmkuhl!</h2>
+            <p>I'm a fourth-year EECS undergraduate at UC Berkeley 
+            interested in using cryptography to build decentralized and
+            privacy-preserving systems.
+            <br> <br>
+            Outside of work, you will probably find me lost somewhere
+            in nature pondering epistemology, drinking excessive amounts of
+            coffee, reading, or playing music!
             </p>
+            <div>
+              <p>
+                <a href="https://www.github.com/ryanleh" class="mr-2 mb-2">Github</a>
+                <a href="cv.pdf" class="mr-2 mb-2">CV</a>
+                <a href="https://www.linkedin.com/in/ryan-lehmkuhl-aba185146/" class="mr-2 mb-2">LinkedIn</a>
+              </p>
+            </div>
+          </div>
+          <div class="column" style="height: 100%">
+            <img style="height: 225px", src="img/profile.png">
           </div>
         </div>
         <hr>
-        <div>
-          <h3 style="font-weight:300;">Publications</h3>
+        <div class="center">
+        <h3 style="font-weight:300;">Publications</h3>
           
           <p><strong>Muse: Client-Malicious Secure Inference. </strong><br> 
           <i style="font-weight: 350"><b>Ryan Lehmkuhl</b>, Pratyush Mishra, Akshayaram Srinivasan, Raluca Ada Popa.</i><br>
