--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <br> <br>
             Outside of work, you will probably find me lost somewhere
             in nature pondering epistemology, drinking excessive amounts of
-            coffee, reading, or playing music!
+            coffee, biking, or playing music!
             </p>
             <div>
               <p>
