--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
           </div>
           <div class = "column">
             <h2>Hi, I'm Ryan Lehmkuhl!</h2>
-            <p>I'm a fourth-year EECS undergraduate at UC Berkeley 
-            interested in using cryptography to build decentralized and
-            privacy-preserving systems.
+            <p>I'm a recent UC Berkeley EECS graduate interested in using
+            cryptography to build decentralized and privacy-preserving systems.
             <br> <br>
-            Outside of work, you will probably find me lost somewhere
-            in nature pondering epistemology, drinking excessive amounts of
-            coffee, biking, or playing music!
+            Outside of work, you will probably find me lost somewhere in
+            nature, drinking excessive amounts of coffee, biking, or playing
+            music! I also thoroughly enjoy studying various topics in philosophy,
+            sociology, and psychology.
             </p>
             <div>
               <p>
@@ -59,14 +59,14 @@
           
           <p><strong>Muse: Client-Malicious Secure Inference. </strong><br> 
           <i style="font-weight: 350"><b>Ryan Lehmkuhl</b>, Pratyush Mishra, Akshayaram Srinivasan, Raluca Ada Popa.</i><br>
-        In submission <a
-          href="https://www.usenix.org/conference/usenixsecurity21">USENIX Security 2021.</a>
+          <a href="https://www.usenix.org/conference/usenixsecurity21">USENIX
+            Security 2021</a> (Conditional Acceptance).
 
           <p><strong>Delphi: A Cryptographic Inference Service for Neural
             Networks. </strong><br> 
           <i style="font-weight: 350">Pratyush Mishra, <b>Ryan Lehmkuhl</b>, Akshayaram Srinivasan, Wenting Zheng, Raluca Ada Popa.</i><br>
-      <a href="https://www.usenix.org/conference/usenixsecurity20">USENIX Security 2020.</a>
-      (<a href="https://eprint.iacr.org/2020/050">ePrint</a>, <a href="https://github.com/mc2-project/delphi">Code</a>)</p>
+          <a href="https://www.usenix.org/conference/usenixsecurity20">USENIX Security 2020</a>.
+          (<a href="https://eprint.iacr.org/2020/050">ePrint</a>, <a href="https://github.com/mc2-project/delphi">Code</a>)</p>
 </li>
         </div>
       </main>
