--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <p><strong>Muse: Client-Malicious Secure Inference. </strong><br> 
           <i style="font-weight: 350"><b>Ryan Lehmkuhl</b>, Pratyush Mishra, Akshayaram Srinivasan, Raluca Ada Popa.</i><br>
           <a href="https://www.usenix.org/conference/usenixsecurity21">USENIX
-            Security 2021</a> (Conditional Acceptance).
+            Security 2021</a>.
 
           <p><strong>Delphi: A Cryptographic Inference Service for Neural
             Networks. </strong><br> 
