--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
             <h2>Hi, I'm Ryan Lehmkuhl!</h2>
             <p>I'm a recent UC Berkeley EECS graduate interested in using
             cryptography to build decentralized and privacy-preserving systems.
+            <br><br>
+            I'm currently taking a gap year to work for <a
+              href="https://opaquesys.io/">Opaque Systems</a> and will be
+            joining the <a href="https://pdos.csail.mit.edu/">PDOS group</a> at
+            MIT as a PhD candidate advised by
+            <a href="https://people.csail.mit.edu/henrycg/">Henry
+              Corrigan-Gibbs</a> in Fall 2022.
             <br> <br>
             Outside of work, you will probably find me lost somewhere in
             nature, drinking excessive amounts of coffee, biking, or playing
