--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             <br><br>
             I'm currently taking a gap year to work for <a
               href="https://opaquesys.io/">Opaque Systems</a> and will be
-            joining the <a href="https://pdos.csail.mit.edu/">PDOS group</a> at
+            joining the <a href="https://pdos.csail.mit.edu/">PDOS</a> and
+            <a href="https://css.csail.mit.edu/">CSS</a> groups at
             MIT as a PhD candidate advised by
             <a href="https://people.csail.mit.edu/henrycg/">Henry
               Corrigan-Gibbs</a> in Fall 2022.
