--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
   <body>
       <main>
         <div class="mb-5 center row">
-          <div class="column" style="height: 100%">
-            <img style="height: 225px", src="img/profile.png">
+          <div class="rcolumn" style="height: 100%; text-align:center">
+            <img style="height: 425px", src="img/profile.jpg">
           </div>
-          <div class = "column">
+          <div class = "lcolumn">
             <h2>Hi, I'm Ryan Lehmkuhl!</h2>
             <p>I'm a recent UC Berkeley EECS graduate interested in using
             cryptography to build decentralized and privacy-preserving systems.
             <br><br>
             I'm currently taking a gap year to work for <a
-              href="https://opaquesys.io/">Opaque Systems</a> and will be
+              href="https://opaque.co/">Opaque</a> and will be
             joining the <a href="https://pdos.csail.mit.edu/">PDOS</a> and
             <a href="https://css.csail.mit.edu/">CSS</a> groups at
             MIT as a PhD candidate advised by
@@ -64,6 +64,10 @@
         <hr>
         <div class="center">
         <h3 style="font-weight:300;">Publications</h3>
+
+          <p><strong>Efficient Private Delegation of zkSNARK Provers. </strong><br> 
+          <i style="font-weight: 350">Alessandro Chiesa, <b>Ryan Lehmkuhl</b>, Pratyush Mishra, Yinuo Zhang.</i><br>
+          In submission <a href="https://www.usenix.org/conference/usenixsecurity21">IEEE S&P 2022</a>.
           
           <p><strong>Muse: Client-Malicious Secure Inference. </strong><br> 
           <i style="font-weight: 350"><b>Ryan Lehmkuhl</b>, Pratyush Mishra, Akshayaram Srinivasan, Raluca Ada Popa.</i><br>
