--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <main>
         <div class="mb-5 center row">
           <div class="rcolumn" style="height: 100%; text-align:center">
-            <img style="height: 425px", src="img/profile.jpg">
+            <img class="img" src="img/profile.jpg">
           </div>
           <div class = "lcolumn">
             <h2>Hi, I'm Ryan Lehmkuhl!</h2>
