--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             <a href="https://people.csail.mit.edu/henrycg/">Henry
               Corrigan-Gibbs</a> in Fall 2022.
             <br> <br>
-            Outside of work, you will probably find me lost somewhere in
-            nature, drinking excessive amounts of coffee, biking, or playing
+            Outside of work, you will probably find me lost backpacking somewhere in
+            nature, drinking excessive amounts of coffee, cooking, biking, or playing
             music! I also thoroughly enjoy studying various topics in philosophy,
             sociology, and psychology.
             </p>
@@ -71,8 +71,8 @@
           
           <p><strong>Muse: Client-Malicious Secure Inference. </strong><br> 
           <i style="font-weight: 350"><b>Ryan Lehmkuhl</b>, Pratyush Mishra, Akshayaram Srinivasan, Raluca Ada Popa.</i><br>
-          <a href="https://www.usenix.org/conference/usenixsecurity21">USENIX
-            Security 2021</a>.
+          <a href="https://www.usenix.org/conference/usenixsecurity21">USENIX Security 2021</a>.
+          (<a href="https://eprint.iacr.org/2021/1040">ePrint</a>, <a href="https://github.com/mc2-project/muse">Code</a>)</p>
 
           <p><strong>Delphi: A Cryptographic Inference Service for Neural
             Networks. </strong><br> 
