--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             <a href="https://people.csail.mit.edu/henrycg/">Henry
               Corrigan-Gibbs</a> in Fall 2022.
             <br> <br>
-            Outside of work, you will probably find me lost backpacking somewhere in
-            nature, drinking excessive amounts of coffee, cooking, biking, or playing
+            Outside of work, you will probably find me lost backpacking somewhere,
+            drinking excessive amounts of coffee, cooking, biking, or playing
             music! I also thoroughly enjoy studying various topics in philosophy,
             sociology, and psychology.
             </p>
@@ -67,7 +67,7 @@
 
           <p><strong>Efficient Private Delegation of zkSNARK Provers. </strong><br> 
           <i style="font-weight: 350">Alessandro Chiesa, <b>Ryan Lehmkuhl</b>, Pratyush Mishra, Yinuo Zhang.</i><br>
-          In submission <a href="https://www.usenix.org/conference/usenixsecurity21">IEEE S&P 2022</a>.
+          In submission <a href="https://www.usenix.org/conference/usenixsecurity22">USENIX Security 2022</a>.
           
           <p><strong>Muse: Client-Malicious Secure Inference. </strong><br> 
           <i style="font-weight: 350"><b>Ryan Lehmkuhl</b>, Pratyush Mishra, Akshayaram Srinivasan, Raluca Ada Popa.</i><br>
