--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
               Corrigan-Gibbs</a> in Fall 2022.
             <br> <br>
             Outside of work, you will probably find me lost backpacking somewhere,
-            drinking excessive amounts of coffee, cooking, biking, or playing
-            music! I also thoroughly enjoy studying various topics in philosophy,
-            sociology, and psychology.
+            drinking excessive amounts of coffee, cooking, biking, reading, or playing
+            music! I also dabble in epistemology, literary theory, sociology, and
+            cognitive psychology.
             </p>
             <div>
               <p>
@@ -67,7 +67,8 @@
 
           <p><strong>Efficient Private Delegation of zkSNARK Provers. </strong><br> 
           <i style="font-weight: 350">Alessandro Chiesa, <b>Ryan Lehmkuhl</b>, Pratyush Mishra, Yinuo Zhang.</i><br>
-          In submission <a href="https://www.usenix.org/conference/usenixsecurity22">USENIX Security 2022</a>.
+          In submission <a href="https://www.usenix.org/conference/usenixsecurity22">USENIX
+            Security 2023</a>.
           
           <p><strong>Muse: Client-Malicious Secure Inference. </strong><br> 
           <i style="font-weight: 350"><b>Ryan Lehmkuhl</b>, Pratyush Mishra, Akshayaram Srinivasan, Raluca Ada Popa.</i><br>
@@ -81,6 +82,20 @@
           (<a href="https://eprint.iacr.org/2020/050">ePrint</a>, <a href="https://github.com/mc2-project/delphi">Code</a>)</p>
 </li>
         </div>
+        <hr>
+        <div class="center">
+        <h3 style="font-weight:300;">Miscellaneous Works</h3>
+        <ul>
+          <li>
+            <a href="memoir.pdf">Letting Go: A Memoir</a>
+          </li>
+          <li>
+            <a href="marlin_pst13.pdf">Multivariate Commitments for a Single Degree Bound</a>
+          </li>
+        </ul>
+
+        </div>
+
       </main>
   </body>
 </html>
