--- a/index.html
+++ b/index.html
@@ -54,9 +54,11 @@
             </p>
             <div>
               <p>
-                <a href="https://www.github.com/ryanleh" class="mr-2 mb-2">Github</a>
-                <a href="cv.pdf" class="mr-2 mb-2">CV</a>
                 <a href="https://www.linkedin.com/in/ryan-lehmkuhl-aba185146/" class="mr-2 mb-2">LinkedIn</a>
+                <a href="cv.pdf" class="mr-2 mb-2">CV</a>
+                <a href="https://scholar.google.com/citations?user=-6RbUs0AAAAJ&hl=en"
+                  class="mr-2 mb-2">Google Scholar</a>
+                <a href="https://www.github.com/ryanleh" class="mr-2 mb-2">Github</a>
               </p>
             </div>
           </div>
