--- a/index.html
+++ b/index.html
@@ -38,21 +38,34 @@
           </div>
           <div class = "lcolumn">
             <h2>Hi, I'm Ryan Lehmkuhl!</h2>
-            <p>I'm a recent UC Berkeley EECS graduate interested in using
-            cryptography to build decentralized and privacy-preserving systems.
+            <p>
+            I'm a first year PhD student in the <a href="https://pdos.csail.mit.edu/">PDOS</a> and
+            <a href="https://css.csail.mit.edu/">CSS</a> groups at MIT working under
+            the excellent guidance of <a href="https://people.csail.mit.edu/henrycg/">Henry
+              Corrigan-Gibbs</a> in the areas of cryptography, computer security, and systems. I am
+            supported by an MIT Priscilla Chou Fellowship and an NSF Graduate Research Fellowship.
+
             <br><br>
-            I'm currently taking a gap year to work for <a
-              href="https://opaque.co/">Opaque</a> and will be
-            joining the <a href="https://pdos.csail.mit.edu/">PDOS</a> and
-            <a href="https://css.csail.mit.edu/">CSS</a> groups at
-            MIT as a PhD candidate advised by
-            <a href="https://people.csail.mit.edu/henrycg/">Henry
-              Corrigan-Gibbs</a> in Fall 2022.
+
+            Before beginning my PhD, I worked at <a href="https://opaque.co/">Opaque</a>, a startup
+            that provides a platform for collaborative data analytics on private data.
+            
+            <br><br>
+
+            Prior to that, I graduated with a BS in EECS from UC Berkeley under the superb advisement
+            of <a href="https://people.eecs.berkeley.edu/~raluca/">Raluca Ada
+              Popa</a> and <a href="http://people.eecs.berkeley.edu/~alexch/">Alessandro Chiesa</a>.
+
             <br> <br>
             Outside of work, you will probably find me lost backpacking somewhere,
             drinking excessive amounts of coffee, cooking, biking, reading, or playing
             music! I also dabble in epistemology, literary theory, sociology, and
             cognitive psychology.
+
+            <br><br>
+            
+            My email address is ryanleh [at] mit [dot] edu.
+
             </p>
             <div>
               <p>
