--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a href="https://css.csail.mit.edu/">CSS</a> groups at MIT working under
             the excellent guidance of <a href="https://people.csail.mit.edu/henrycg/">Henry
               Corrigan-Gibbs</a> in the areas of cryptography, computer security, and systems. I am
-            supported by an MIT Priscilla Chou Fellowship and an NSF Graduate Research Fellowship.
+            supported by an MIT Sunlin (1966) and Priscilla Chou Fellowship and an NSF Graduate Research Fellowship.
 
             <br><br>
 
