--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a href="https://css.csail.mit.edu/">CSS</a> groups at MIT working under
             the excellent guidance of <a href="https://people.csail.mit.edu/henrycg/">Henry
               Corrigan-Gibbs</a> in the areas of cryptography, computer security, and systems. I am
-            supported by an MIT Sunlin (1966) and Priscilla Chou Fellowship and an NSF Graduate Research Fellowship.
+            supported by an MIT Sunlin and Priscilla Chou Fellowship and an NSF Graduate Research Fellowship.
 
             <br><br>
 
@@ -82,10 +82,9 @@
         <div class="center">
         <h3 style="font-weight:300;">Publications</h3>
 
-          <p><strong>Efficient Private Delegation of zkSNARK Provers. </strong><br> 
+          <p><strong>EOS: Efficient Outsourcing of zkSNARKs. </strong><br> 
           <i style="font-weight: 350">Alessandro Chiesa, <b>Ryan Lehmkuhl</b>, Pratyush Mishra, Yinuo Zhang.</i><br>
-          In submission <a href="https://www.usenix.org/conference/usenixsecurity22">USENIX
-            Security 2023</a>.
+          <a href="https://www.usenix.org/conference/usenixsecurity22">USENIX Security 2023</a>.
           
           <p><strong>Muse: Client-Malicious Secure Inference. </strong><br> 
           <i style="font-weight: 350"><b>Ryan Lehmkuhl</b>, Pratyush Mishra, Akshayaram Srinivasan, Raluca Ada Popa.</i><br>
