--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
         <h3 style="font-weight:300;">Publications</h3>
 
           <p><strong>EOS: Efficient Outsourcing of zkSNARKs. </strong><br> 
-          <i style="font-weight: 350">Alessandro Chiesa, <b>Ryan Lehmkuhl</b>, Pratyush Mishra, Yinuo Zhang.</i><br>
-          <a href="https://www.usenix.org/conference/usenixsecurity22">USENIX Security 2023</a>.
+          <i style="font-weight: 350">*Alessandro Chiesa, <b>Ryan Lehmkuhl</b>, Pratyush Mishra, Yinuo Zhang.</i><br>
+          To appear <a href="https://www.usenix.org/conference/usenixsecurity22">USENIX Security 2023</a>.
           
           <p><strong>Muse: Client-Malicious Secure Inference. </strong><br> 
           <i style="font-weight: 350"><b>Ryan Lehmkuhl</b>, Pratyush Mishra, Akshayaram Srinivasan, Raluca Ada Popa.</i><br>
@@ -96,6 +96,9 @@
           <i style="font-weight: 350">Pratyush Mishra, <b>Ryan Lehmkuhl</b>, Akshayaram Srinivasan, Wenting Zheng, Raluca Ada Popa.</i><br>
           <a href="https://www.usenix.org/conference/usenixsecurity20">USENIX Security 2020</a>.
           (<a href="https://eprint.iacr.org/2020/050">ePrint</a>, <a href="https://github.com/mc2-project/delphi">Code</a>)</p>
+
+
+          <i><b>*</b> Alphabetical author ordering</i>
 </li>
         </div>
         <hr>
