--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class = "lcolumn">
             <h2>Hi, I'm Ryan Lehmkuhl!</h2>
             <p>
-            I'm a first year PhD student in the <a href="https://pdos.csail.mit.edu/">PDOS</a> and
+            I'm a second year PhD student in the <a href="https://pdos.csail.mit.edu/">PDOS</a> and
             <a href="https://css.csail.mit.edu/">CSS</a> groups at MIT working under
             the excellent guidance of <a href="https://people.csail.mit.edu/henrycg/">Henry
               Corrigan-Gibbs</a> in the areas of cryptography, computer security, and systems. I am
