--- a/index.html
+++ b/index.html
@@ -57,11 +57,10 @@
               Popa</a> and <a href="http://people.eecs.berkeley.edu/~alexch/">Alessandro Chiesa</a>.
 
             <br> <br>
-            Outside of work, you will probably find me lost backpacking somewhere,
-            drinking excessive amounts of coffee, cooking, biking, reading, or playing
-            music! I also dabble in epistemology, literary theory, sociology, and
-            cognitive psychology.
-
+            Outside of work, I prefer to go by Rain (he/they) and you will
+            probably find me lost backpacking somewhere, dancing at a music
+            festival, drinking excessive amounts of coffee, singing, writing,
+            or cooking!
             <br><br>
             
             My email address is ryanleh [at] mit [dot] edu.
