--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <img src="img/profile.jpg">
           </div>
           <div class = "lcolumn">
-            <h2>Hi, I'm Ryan Lehmkuhl!</h2>
+            <h2>Hi, I'm Rain Lehmkuhl! (he/they)</h2>
             <p>
             I'm a second year PhD student in the <a href="https://pdos.csail.mit.edu/">PDOS</a> and
             <a href="https://css.csail.mit.edu/">CSS</a> groups at MIT working under
@@ -57,7 +57,9 @@
               Popa</a> and <a href="http://people.eecs.berkeley.edu/~alexch/">Alessandro Chiesa</a>.
 
             <br> <br>
-            Outside of work, I prefer to go by Rain (he/they) and you will
+            My publications go under the name Ryan, but outside of work I prefer to go by Rain.
+            
+            You will
             probably find me lost backpacking somewhere, dancing at a music
             festival, drinking excessive amounts of coffee, singing, writing,
             or cooking!
