--- a/index.html
+++ b/index.html
@@ -57,12 +57,10 @@
               Popa</a> and <a href="http://people.eecs.berkeley.edu/~alexch/">Alessandro Chiesa</a>.
 
             <br> <br>
-            My publications go under the name Ryan, but outside of work I prefer to go by Rain.
-            
-            You will
-            probably find me lost backpacking somewhere, dancing at a music
-            festival, drinking excessive amounts of coffee, singing, writing,
-            or cooking!
+            My publications go under the name Ryan, but outside of work I
+            prefer to go by Rain. I can usually be found backpacking somewhere,
+            dancing at a music festival, drinking excessive amounts of coffee,
+            singing, writing, or cooking!
             <br><br>
             
             My email address is ryanleh [at] mit [dot] edu.
