--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
 
             Prior to that, I graduated with a BS in EECS from UC Berkeley under the superb advisement
             of <a href="https://people.eecs.berkeley.edu/~raluca/">Raluca Ada
-              Popa</a> and <a href="http://people.eecs.berkeley.edu/~alexch/">Alessandro Chiesa</a>.
+              Popa</a>, <a
+              href="http://people.eecs.berkeley.edu/~alexch/">Alessandro
+            Chiesa</a>, and <a href="https://pratyushmishra.com/">Pratyush
+            Mishra</a>.
 
             <br> <br>
             My publications go under the name Ryan, but outside of work I
@@ -83,18 +86,19 @@
 
           <p><strong>EOS: Efficient Outsourcing of zkSNARKs. </strong><br> 
           <i style="font-weight: 350">*Alessandro Chiesa, <b>Ryan Lehmkuhl</b>, Pratyush Mishra, Yinuo Zhang.</i><br>
-          To appear <a href="https://www.usenix.org/conference/usenixsecurity22">USENIX Security 2023</a>.
+          <a href="https://www.usenix.org/conference/usenixsecurity23">USENIX Security 2023</a>.
+          (<a href="">Paper</a>, <a href="">Code</a>)</p>
           
           <p><strong>Muse: Client-Malicious Secure Inference. </strong><br> 
           <i style="font-weight: 350"><b>Ryan Lehmkuhl</b>, Pratyush Mishra, Akshayaram Srinivasan, Raluca Ada Popa.</i><br>
           <a href="https://www.usenix.org/conference/usenixsecurity21">USENIX Security 2021</a>.
-          (<a href="https://eprint.iacr.org/2021/1040">ePrint</a>, <a href="https://github.com/mc2-project/muse">Code</a>)</p>
+          (<a href="https://eprint.iacr.org/2021/1040">Paper</a>, <a href="https://github.com/mc2-project/muse">Code</a>)</p>
 
           <p><strong>Delphi: A Cryptographic Inference Service for Neural
             Networks. </strong><br> 
           <i style="font-weight: 350">Pratyush Mishra, <b>Ryan Lehmkuhl</b>, Akshayaram Srinivasan, Wenting Zheng, Raluca Ada Popa.</i><br>
           <a href="https://www.usenix.org/conference/usenixsecurity20">USENIX Security 2020</a>.
-          (<a href="https://eprint.iacr.org/2020/050">ePrint</a>, <a href="https://github.com/mc2-project/delphi">Code</a>)</p>
+          (<a href="https://eprint.iacr.org/2020/050">Paper</a>, <a href="https://github.com/mc2-project/delphi">Code</a>)</p>
 
 
           <i><b>*</b> Alphabetical author ordering</i>
