Updates to force redeployment

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <p><strong>EOS: Efficient Outsourcing of zkSNARKs. </strong><br> 
           <i style="font-weight: 350">*Alessandro Chiesa, <b>Ryan Lehmkuhl</b>, Pratyush Mishra, Yinuo Zhang.</i><br>
           <a href="https://www.usenix.org/conference/usenixsecurity23">USENIX Security 2023</a>.
-          (<a href="">Paper</a>, <a href="">Code</a>)</p>
+          (<a href="https://www.usenix.org/conference/usenixsecurity23/presentation/chiesa">Paper</a>)</p>
           
           <p><strong>Muse: Client-Malicious Secure Inference. </strong><br> 
           <i style="font-weight: 350"><b>Ryan Lehmkuhl</b>, Pratyush Mishra, Akshayaram Srinivasan, Raluca Ada Popa.</i><br>
