--- a/index.html
+++ b/index.html
@@ -61,9 +61,12 @@
 
             <br> <br>
             My publications go under the name Ryan, but outside of work I
-            prefer to go by Rain. I can usually be found backpacking somewhere,
-            dancing at a music festival, drinking excessive amounts of coffee,
-            singing, writing, or cooking!
+            prefer to go by Rain. I have a bunch of random hobbies, but recently
+            most of my free time has been spent dancing (mainly house)–hit me
+            up if you want to take a class, go out, or travel to a festival! I'm
+            always excited to meet new people, especially other queer folk, so
+            don't hesitate to reach out for whatever reason.
+
             <br><br>
             
             My email address is ryanleh [at] mit [dot] edu.
