--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             My publications go under the name Ryan, but outside of work I
             prefer to go by Rain. I have a bunch of random hobbies, but recently
             most of my free time has been spent dancing (mainly house)–hit me
-            up if you want to take a class, go out, or travel to a festival! I'm
-            always excited to meet new people, especially other queer folk, so
+            up if you want to take a class, go out, or travel to a festival!
+            I always love meeting new people, especially other queer folk, so
             don't hesitate to reach out for whatever reason.
 
             <br><br>
