--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             Mishra</a>.
 
             <br> <br>
-            My publications go under the name Ryan, but outside of work I
+            Professionally I go by Ryan, but outside of work I
             prefer to go by Rain. I have a bunch of random hobbies, but recently
             most of my free time has been spent dancing (mainly house)–hit me
             up if you want to take a class, go out, or travel to a festival!
