--- a/audiobook.html
+++ b/audiobook.html
@@ -46,8 +46,11 @@
         <h3>Practice 1: Mindfulness</h3>
         <audio controls> <source src="audiobook/p1_intro.mp3" type="audio/mpeg"> </audio>
         <br>
-        <h3>1: What is Mindfulness?</h3>
+        <h3>1: What is mindfulness?</h3>
         <audio controls> <source src="audiobook/1.mp3" type="audio/mpeg"> </audio>
+        <br>
+        <h3>2: Why is mindfulness so important for couples?</h3>
+        <audio controls> <source src="audiobook/2.mp3" type="audio/mpeg"> </audio>
     </div>
 
 </body>
