--- a/audiobook.html
+++ b/audiobook.html
@@ -51,6 +51,14 @@
         <br>
         <h3>2: Why is mindfulness so important for couples?</h3>
         <audio controls> <source src="audiobook/2.mp3" type="audio/mpeg"> </audio>
+        <br>
+        <h3>3: How to Practice Mindfulness in Your Relationship</h3>
+        <audio controls> <source src="audiobook/3.mp3" type="audio/mpeg"> </audio>
+        <br>
+        <h3>4: Mindfulness Exercises</h3>
+        <audio controls> <source src="audiobook/4.mp3" type="audio/mpeg"> </audio>
+        <br><br>
+        <h2>Part 2 (Coming soon!)</h2>
     </div>
 
 </body>
