--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class = "lcolumn">
             <h2>Hi, I'm Rain Lehmkuhl! (he/they)</h2>
             <p>
-            I'm a second year PhD student in the <a href="https://pdos.csail.mit.edu/">PDOS</a> and
+            I'm a third year PhD student in the <a href="https://pdos.csail.mit.edu/">PDOS</a> and
             <a href="https://css.csail.mit.edu/">CSS</a> groups at MIT working under
             the excellent guidance of <a href="https://people.csail.mit.edu/henrycg/">Henry
               Corrigan-Gibbs</a> in the areas of cryptography, computer security, and systems. I am
@@ -63,7 +63,7 @@
             Professionally I go by Ryan, but outside of work I
             prefer to go by Rain. I have a bunch of random hobbies, but recently
             most of my free time has been spent dancing (mainly house)–hit me
-            up if you want to take a class, go out, or travel to a festival!
+            up if you want to take a class, sesh, or travel to a festival!
             I always love meeting new people, especially other queer folk, so
             don't hesitate to reach out for whatever reason.
 
@@ -87,22 +87,25 @@
         <div class="center">
         <h3 style="font-weight:300;">Publications</h3>
 
+          <p><strong>Distributional Private Information Retrieval. </strong><br> 
+          <i style="font-weight: 350"><b>Ryan Lehmkuhl</b>, Alexandra Henzinger, Henry Corrigan-Gibbs.</i><br>
+          USENIX Security 2025.
+          (<a href="https://eprint.iacr.org/2025/132">Paper</a>, <a href="https://github.com/ryanleh/crowdsurf">Code</a>)</p>
+
           <p><strong>EOS: Efficient Outsourcing of zkSNARKs. </strong><br> 
           <i style="font-weight: 350">*Alessandro Chiesa, <b>Ryan Lehmkuhl</b>, Pratyush Mishra, Yinuo Zhang.</i><br>
-          <a href="https://www.usenix.org/conference/usenixsecurity23">USENIX Security 2023</a>.
+          USENIX Security 2023.
           (<a href="https://www.usenix.org/conference/usenixsecurity23/presentation/chiesa">Paper</a>)</p>
           
           <p><strong>Muse: Client-Malicious Secure Inference. </strong><br> 
           <i style="font-weight: 350"><b>Ryan Lehmkuhl</b>, Pratyush Mishra, Akshayaram Srinivasan, Raluca Ada Popa.</i><br>
-          <a href="https://www.usenix.org/conference/usenixsecurity21">USENIX Security 2021</a>.
+          USENIX Security 2021.
           (<a href="https://eprint.iacr.org/2021/1040">Paper</a>, <a href="https://github.com/mc2-project/muse">Code</a>)</p>
 
-          <p><strong>Delphi: A Cryptographic Inference Service for Neural
-            Networks. </strong><br> 
+          <p><strong>Delphi: A Cryptographic Inference Service for Neural Networks. </strong><br> 
           <i style="font-weight: 350">Pratyush Mishra, <b>Ryan Lehmkuhl</b>, Akshayaram Srinivasan, Wenting Zheng, Raluca Ada Popa.</i><br>
-          <a href="https://www.usenix.org/conference/usenixsecurity20">USENIX Security 2020</a>.
+          USENIX Security 2020.
           (<a href="https://eprint.iacr.org/2020/050">Paper</a>, <a href="https://github.com/mc2-project/delphi">Code</a>)</p>
-
 
           <i><b>*</b> Alphabetical author ordering</i>
 </li>
